# comuniqg

./: .gitignore  Procfile  README.md  manage.py  pyproject.toml  pytest.ini  requirements.txt
account/: admin.py  forms.py  models.py
account/migrations/: 0001_initial.py  0002_auto_20240926_1453.py
account/test/: test_models.py
antigobd/: apps.py
clientes/: urls.py  views.py
comuniqg/: asgi.py  roles.py  settings.py  urls.py  wsgi.py
core/: facade.py  urls.py  views.py
core/static/core/css/: main.css  style.css
core/static/core/img/: site_img_01.jfif
core/static/core/js/: base.js  faturamento.js  tabelas.js
core/templates/core/: base.html  base_restrito.html  index.html
dashboard/: urls.py  views.py
databaseold/: apps.py
databaseold/migrations/: 0001_initial.py
faturamento/: facade.py  models.py  print.py  urls.py  views.py
faturamento/migrations/: 0001_initial.py
faturamento/templates/faturamento/: card_pagamento_parcial.html  cliente_faturada.html  html_aguardando_faturar.html  html_fatura_agrupada.html  html_pagamento_fatura.html  html_pagamentos_dia.html  html_recebe_mensal.html  html_recebe_mensal_detalhado.html  html_servico_faturar_cliente.html  html_servico_faturar_cliente_obras.html  html_servico_faturar_cliente_solicitantes.html  index.html  servico_faturada.html
faturamento/tests/: test_facade.py  test_models.py
servicos/: facade.py  print.py  urls.py  views.py
servicos/templates/servicos/: html_servicos_aberta.html  html_servicos_entregar.html  index.html
tabelas/: facade.py  forms.py  urls.py  views.py
tabelas/templates/tabelas/: form_tabelas.html  index.html  tabela_propria.html  tabela_selecionada.html
